--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -15,7 +15,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    step:
+    steps:
       - uses: actions/checkout@v2
       - run: npm install
       - run: npm run build
